# htmlt-wasm

./: .dir-locals.el  .gitignore  .gitmodules  README.md  cabal.project  default.nix  ghc-wasm-bridge.cabal  htmlt-wasm.cabal  package.json  shell.nix  tsconfig.json  wasm.wasm  webpack.config.js
benchmarks/: 01.hs  benchmark_01.hs
benchmarks/reports/: benchmark_01__2023-11-01_20-17-48__5611afe125ac23b5831f923f0a3eb0ebdb1afa6d.csv  benchmark_01__2023-11-02_08-47-41__a17f913832d47a35f5ba3b99d498f5af4943366c.csv  benchmark_01__2023-11-02_17-08-52__5cf7d811237375520e2a0f7b34bc50a558926065.csv  benchmark_01__2023-11-04_10-44-50__aafe8e10125be04aaf885c49e90d63d00f07a2c8.csv  benchmark_01__2023-11-05_15-05-04__9ff1ae196bc1a420e586ddaa3f1284b3e0a112f8.csv  benchmark_01__2023-11-05_15-23-29__36d400f797b808892e7e1147d92fcdc0d4f92f15.csv  benchmark_01__2023-11-06_17-29-40__cd554090ac94e6c8fae575a7174e5cbcbf18e0fa.csv  benchmark_01__2023-12-06_18-49-42__9aefb183f9ba3f3c760d6cdca50559f8e0f5828e.csv
cbits/: init_greadymem.c
dist-newstyle/: awsm.css  index.bundle.js  todomvc.html  voting-greedymem.html  voting.html
examples/todomvc/: JsMain.hs  JsmMain.hs  TodoItem.hs  TodoList.hs  Utils.hs  devserver.hs  jsreactor.hs  reactor.hs  todomvc-server.hs  todomvc.hs
examples/todomvc-server/: todomvc-server.hs
examples/voting/: JsMain.hs  JsmMain.hs  devserver.hs  jsreactor.hs  reactor.hs  voting.hs
src/: HtmlT.hs  JSM.hs  Protocol.hs  html.ts  index.js  protocol.ts  wasm.hs
src-js/: binary.ts  devserver.ts  index.js  lib.ts  protocol.ts  reactor.ts
src/HtmlT/: Base.hs  DOM.hs  DevServer.hs  Element.hs  Event.hs  Html.hs  JS.hs  JSM.hs  JSON.hs  JavaScriptBackend.hs  MVar.hs  Marshal.hs  Property.hs  Protocol.hs  RJS.hs  Reactive.hs  Reactor.hs  WASM.hs  Wasm.hs  WebAssembly.hs
src/HtmlT/JSON/: Types.hs
src/HtmlT/Main/: DevServer.hs  JavaScript.hs  WebAssembly.hs
src/HtmlT/Protocol/: JNumber.hs  JSNumber.hs  JSVal.hs  Utf8.hs
src/HtmlT/Wasm/: Base.hs  DOM.hs  DevServer.hs  Element.hs  Event.hs  Html.hs  JSM.hs  Main.hs  Marshal.hs  Property.hs  Protocol.hs  Types.hs
src/HtmlT/Wasm/Protocol/: JNumber.hs  Utf8.hs
src/HtmlT/WebAssembly/: Base.hs  DOM.hs  DevServer.hs  Element.hs  Event.hs  Html.hs  JSM.hs  Marshal.hs  Property.hs  Protocol.hs  Reactor.hs
src/HtmlT/WebAssembly/Protocol/: JNumber.hs  Utf8.hs
