cabal-version: 2.4

name: ghc-wasm-bridge
version: 0.1.0.0
build-type: Simple

executable ghc-wasm-bridge
  hs-source-dirs:      src
  main-is:             hello.hs
  ghc-options:         -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=hs_init,--export=app,--export=hs_malloc,--export=hs_free
  build-depends:       base
  default-language:    Haskell2010