cabal-version: 2.4

name: htmlt-wasm
version: 0.1.0.0
build-type: Simple

common common-config
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wno-missing-home-modules -static
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

executable voting
  import: common-config
  if !arch(wasm32)
    buildable: False
  else
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor
      -optl-Wl,--export=init_greadymem,--export=init_debug,--export=app,--export=hs_malloc,--export=hs_free
    c-sources: cbits/init_greadymem.c
    include-dirs: cbits
  hs-source-dirs: examples/voting
  main-is: voting.hs

  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    htmlt-wasm,
    mtl,
    text,

executable todomvc
  import: common-config
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor -dlint -debug
      -optl-Wl,--export=init_greadymem,--export=init_debug,--export=app,--export=hs_malloc,--export=hs_free
    c-sources: cbits/init_greadymem.c
    include-dirs: cbits
    main-is: reactor.hs
  else
    main-is: devserver.hs
  hs-source-dirs: examples/todomvc
  other-modules:
    Utils
    TodoList
    TodoItem
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    htmlt-wasm,
    mtl,
    text,

library
  import: common-config
  hs-source-dirs: src
  exposed-modules:
    HtmlT.Wasm
    HtmlT.Wasm.Base
    HtmlT.Wasm.DOM
    HtmlT.Wasm.Element
    HtmlT.Wasm.Event
    HtmlT.Wasm.Html
    HtmlT.Wasm.JSM
    HtmlT.Wasm.Main
    HtmlT.Wasm.Marshal
    HtmlT.Wasm.Property
    HtmlT.Wasm.Protocol
    HtmlT.Wasm.Protocol.JNumber
    HtmlT.Wasm.Protocol.Utf8
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    mtl,
    text,
  if !arch(wasm32)
    exposed-modules:
      HtmlT.Wasm.DevServer
    build-depends:
      wai,
      wai-websockets,
      websockets,
      http-types,
      foreign-store,
      warp,
 