cabal-version: 2.4

name: htmlt-wasm
version: 0.1.0.0
build-type: Simple

common common-config
  ghc-options:
    -Wall -Wno-missing-signatures -Wno-name-shadowing -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wno-missing-home-modules -static
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import: common-config
  hs-source-dirs: src
  exposed-modules:
    HtmlT
    HtmlT.Base
    HtmlT.DOM
    HtmlT.Element
    HtmlT.Event
    HtmlT.Html
    HtmlT.JSON
    HtmlT.JSON.Types
    HtmlT.MVar
    HtmlT.Property
    HtmlT.Protocol
    HtmlT.Protocol.JNumber
    HtmlT.RJS
    HtmlT.Reactor
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    mtl,
    text,
  if !arch(wasm32)
    exposed-modules:
      HtmlT.DevServer
    build-depends:
      foreign-store,
      http-types,
      wai,
      wai-app-static,
      wai-websockets,
      warp,
      websockets,
 
executable voting
  import: common-config
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor -dlint -debug
      -optl-Wl,--export=init_greadymem,--export=init_debug,--export=app,--export=hs_malloc,--export=hs_free
    c-sources: cbits/init_greadymem.c
    include-dirs: cbits
    main-is: reactor.hs
  else
    main-is: devserver.hs
  hs-source-dirs: examples/voting

  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    htmlt-wasm,
    mtl,
    text,

executable todomvc
  import: common-config
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor -dlint -debug
      -optl-Wl,--export=init_greadymem,--export=init_debug,--export=app,--export=hs_malloc,--export=hs_free
    c-sources: cbits/init_greadymem.c
    include-dirs: cbits
    main-is: reactor.hs
  else
    main-is: devserver.hs
  hs-source-dirs: examples/todomvc
  other-modules:
    Utils
    TodoList
    TodoItem
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    htmlt-wasm,
    mtl,
    text,

benchmark benchmark_01
  import: common-config
  type: exitcode-stdio-1.0
  main-is: benchmark_01.hs
  ghc-options: -O3 -funbox-strict-fields
  hs-source-dirs: ./benchmarks ./examples/todomvc ./src
  other-modules:
    HtmlT
    HtmlT.Base
    HtmlT.DOM
    HtmlT.Element
    HtmlT.Event
    HtmlT.Html
    HtmlT.JSON
    HtmlT.JSON.Types
    HtmlT.MVar
    HtmlT.Property
    HtmlT.Protocol
    HtmlT.Protocol.JNumber
    HtmlT.RJS
    HtmlT.Reactor
    TodoItem
    TodoList
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    exceptions,
    gauge,
    mtl,
    text,
